--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,5 @@
-<input type="text" [(ngModel)]="title">
+<!-- Iteración de productos basado en un componente -->
+<div *ngFor="let product of products">
+  <app-product [product]="product"></app-product>
+</div>
 
-{{ title }}
