--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,7 @@
 <!-- Iteración de productos basado en un componente -->
 <div *ngFor="let product of products">
-  <app-product [product]="product"></app-product>
+  <app-product
+    (productClicked)="clickProduct($event)"
+    [product]="product"
+  ></app-product>
 </div>
-
