--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,7 @@
 <!-- Iteración de productos basado en un componente -->
-<div *ngFor="let product of products">
+<div class="product-grid">
   <app-product
+    *ngFor="let product of products"
     (productClicked)="clickProduct($event)"
     [product]="product"
   ></app-product>
