--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,7 @@
+<input type="text" [(ngModel)]="power" />
+{{ power | exponential }}
+
+
 <!-- Iteración de productos basado en un componente -->
 <div class="product-grid">
   <app-product
