--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -7,3 +7,9 @@ body {
     display: grid;
     grid-template-columns: repeat(4, 1fr);
 }
+
+@media (min-width: 576px) {
+    .product-grid {
+      grid-template-columns: repeat(3, 1fr);
+    }
+  }
