--- a/src/app/components/product.component.html
+++ b/src/app/components/product.component.html
@@ -1,11 +1,11 @@
 <div class="main-card">
   <div class="tittle-card">
-    <h3>{{ product.title }}</h3>
+    <h3>{{ product.title | uppercase }}</h3>
   </div>
   <div class="card-content">
     <img [src]="product.image" alt="Imagen del producto" class="card-image" />
-    <h5 class="card-price">{{ product.price }}</h5>
-    {{ product.description}}
+    <h5 class="card-price">{{ product.price | currency }}</h5>
+    {{ product.description | slice: 0:60 }}
   </div>
   <div class="card-footer">
     <button class="button-product" (click)="addCart()">
@@ -13,3 +13,6 @@
     </button>
   </div>
 </div>
+
+<p>Hoy es {{ today | date:'medium' }}</p>
+<p>La hora militar es {{ today | date:'HH:mm' }}</p>
