--- a/src/app/components/product.component.html
+++ b/src/app/components/product.component.html
@@ -1,6 +1,6 @@
 <div class="main-card">
   <div class="tittle-card">
-    <h3>{{ product.title | uppercase }}</h3>
+    <h3 appHighlight>{{ product.title | uppercase }}</h3>
   </div>
   <div class="card-content">
     <img [src]="product.image" alt="Imagen del producto" class="card-image" />
