--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,12 +1,2 @@
-<input type="text" [(ngModel)]="power" />
-{{ power | exponential }}
+<router-outlet></router-outlet>
 
-
-<!-- Iteración de productos basado en un componente -->
-<div class="product-grid">
-  <app-product
-    *ngFor="let product of products"
-    (productClicked)="clickProduct($event)"
-    [product]="product"
-  ></app-product>
-</div>
