Feat: product-detail

--- a/src/app/components/product.component.html
+++ b/src/app/components/product.component.html
@@ -11,6 +11,7 @@
     <button class="button-product" (click)="addCart()">
       Agregar al carrito
     </button>
+    <a [routerLink]="['/products', product.id]" >Ver detalles</a>
   </div>
 </div>
 
