--- a/src/app/product/components/product/product.component.scss
+++ b/src/app/product/components/product/product.component.scss
@@ -1,11 +1,12 @@
-:host {
-  margin: 2px;
-  border: 1px solid #333;
-  border-radius: 5px;
+.crop-image {
   display: block;
-  padding: 10px;
-}
+  height: 300px;
+  width: 100%;
 
-img {
-  max-width: 100%;
+  img {
+    object-fit: contain;
+    height: 100%;
+    width: 100%;
+    object-position: center;
+  }
 }
